--- a/components/danmu/danmu.wxml
+++ b/components/danmu/danmu.wxml
@@ -2,7 +2,7 @@
 <view class="danmu" style="padding-top: {{hHeight}}px; padding-bottom: {{tHeight}}px;">
    <view wx:if="{{listFlag === 1}}" class="note-list">
       <block wx:for="{{noteList}}" wx:key="index">
-         <view class="note-item-01 flex flex-ac">
+         <view class="note-item-01 flex flex-ac" bindtap="handleNote" data-item="{{item}}">
             <view class="note-icon flex-none">
                <image src="{{item.icon}}"></image>
             </view>
@@ -28,7 +28,7 @@
    </view>
    <view wx:if="{{listFlag === 2}}" class="note-list">
       <block wx:for="{{doommData}}" wx:key="id">
-         <view wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
+         <view bindtap="handleNote" data-item="{{item}}" wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
             <view class="flex flex-ac pos-r">
                <view class="note-icon">
                   <image src="{{'/assets/img/note/note_icon1'+ item.icon + '.png'}}"></image>
