--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -3,7 +3,7 @@
    <view class="bg-box">
       <image src="/assets/img/bg.png"></image>
    </view>
-   <Header id='header' title="{{title}}" back add/>
+   <Header id='header' bindconfirmkeyword="handleConfirmKeyword" title="{{title}}" back add/>
    <tabbar id='tabbar' bindmyevent="toggleList"/>
    <danmu id='danmu' bindintonote="handleIntoNote" isMore="{{isMore}}" hHeight="{{hHeight}}" tHeight="{{tHeight}}" noteList="{{noteList}}" listFlag="{{listFlag}}"/>
 </view>
