--- a/components/danmu/danmu.wxml
+++ b/components/danmu/danmu.wxml
@@ -1,5 +1,5 @@
 <!--components/danmu.wxml-->
-<view class="danmu" style="padding-top: {{hHeight}}px; padding-bottom: {{tHeight}}px;">
+<view class="danmu" style="padding-top: {{hHeight}}px; margin-bottom: {{tHeight}}px;">
    <view wx:if="{{listFlag === 1}}" class="note-list">
       <block wx:for="{{noteList}}" wx:key="index">
          <view class="note-item-01 flex flex-ac" bindtap="handleNote" data-item="{{item}}">
@@ -26,7 +26,7 @@
          </view>
       </view>
    </view>
-   <view wx:if="{{listFlag === 2}}" class="note-list">
+   <view wx:if="{{listFlag === 2}}" class="note-list bk-style" style="background-image: url('{{bgUrl}}');">
       <block wx:for="{{doommData}}" wx:key="id">
          <view bindtap="handleNote" data-item="{{item}}" wx:if="{{item.display}}" class="note-item-02" style="animation: first {{item.time}}s linear forwards;top:{{item.top}}px;">
             <view class="flex flex-ac pos-r">
