--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -3,6 +3,9 @@ page, .container {
    width: 100%;
    height: 100%;
 }
+.danmu {
+   height: 100%;
+}
 .notebook-item {
    width: 100%;
    height: 218rpx;
