--- a/pages/noteList/noteList.wxml
+++ b/pages/noteList/noteList.wxml
@@ -5,6 +5,8 @@
    </view>
    <Header id='header' bindconfirmkeyword="handleConfirmKeyword" title="{{title}}" back add/>
    <tabbar id='tabbar' bindmyevent="toggleList"/>
-   <danmu id='danmu' bindintonote="handleIntoNote" isMore="{{isMore}}" hHeight="{{hHeight}}" tHeight="{{tHeight}}" noteList="{{noteList}}" listFlag="{{listFlag}}"/>
+   <view class="danmu">
+      <danmu id='danmu' bindintonote="handleIntoNote" isMore="{{isMore}}" hHeight="{{hHeight}}" tHeight="{{tHeight}}" noteList="{{noteList}}" listFlag="{{listFlag}}"/>
+   </view>
 </view>
 <toast id="toast"></toast>
