公告名字，背景保存

--- a/pages/mine/background/background.wxml
+++ b/pages/mine/background/background.wxml
@@ -13,10 +13,10 @@
             </view>
          </block>
       </view>
-      <view class="btn">
+      <!-- <view class="btn">
          <view class="save">
             <image src="/assets/img/save.png"></image>
          </view>
-      </view>
+      </view> -->
    </view>
 </view>
